# dezero-from-scratch

./: LICENSE  README.md  pyproject.toml
dezero/: __init__.py  core.py  core_simple.py  functions.py  layers.py  models.py  optimizers.py  utils.py
